# LMS

./: CMakeLists.txt  CMakelists updated.cpp  README  README.md  Server.h updated.cpp  StudyRoom.cpp  StudyRoom.cpp updated.cpp  StudyRoom.h  auth.cpp  auth.h  book.cpp  book.h  bookloader.cpp  bookloader.h  books.csv  books.txt  borrow.cpp  borrow.h  common.cpp  common.h  export_to_excel.cpp  index.html  inventory.cpp  inventory.h  laptop.cpp  laptop.h  laptops.csv  laptops.txt  librarian.cpp  librarian.h  librarian.h updated.cpp  main.cpp  main.cpp updated.cpp  member.cpp  member.h  preferences.cpp  preferences.h  script.js  server.cpp updated.cpp  studyrooms.csv  (+2 more)
LibraryFrontend/: script.js  style.css
LibraryFrontend/LibraryFrontend/: index.html
LibraryFrontend/__MACOSX/: ._LibraryFrontend
LibraryFrontend/__MACOSX/LibraryFrontend/: ._index.html  ._style.css
